--- a/stylesheet.css
+++ b/stylesheet.css
@@ -133,3 +133,18 @@ h2 {
 span.highlight {
   background-color: #ffffd0;
 }
+
+.round-box {
+  border: 1px solid #ddd;
+  border-radius: 15px;
+  padding: 5px;
+}
+
+.round-box:hover {
+  border-color: #87ceeb;
+}
+
+.description {
+  margin: 2px 0;
+  padding: 0;
+}
