--- a/stylesheet.css
+++ b/stylesheet.css
@@ -109,8 +109,12 @@ body {
   flex-direction: column;
   align-items: center;
   border: 1px solid #ddd;
+  border-radius: 15px;
   padding: 20px;
   margin-bottom: 20px;
+}
+.experience-item:hover {
+  border: 1.2px solid #87ceeb;
 }
 .experience-item img {
   width: 100px;
@@ -131,8 +135,17 @@ body {
 .awards {
   margin-bottom: 40px;
 }
+.award-item:hover {
+  color: #00175a;
+}
 footer {
   text-align: center;
   font-size: 0.9em;
   color: #777;
+}
+.section-title {
+  color: #00175a;
+}
+.reduced-margin {
+  margin: 2px;
 }
